login functionality linked to frontend

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 MONGO_URL = mongodb+srv://Anshika:%40Anshikaa207@cluster0.s59dwho.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+TOKEN_SECRET_KEY = "QWERTYUIOPASDFGHJKLZXCVBNM"
+FRONTEND_URL = http://localhost:5173
